<resources>
    <string name="app_name">App1</string>
    <string name="appone">AppOne</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
</resources>